Changes for 1.6.1.2
* Creating a simple Ping method inside of the Chat Controller, that will ping all computers once every minute, hopefully improving everyone's connections. (Sean Bridges & veqryn)

* Allowing people to hold SHIFT down while their mouse is over a territory in order to keep that territory in the Territory Panel, no matter where they move their mouse afterwards. (frigoref)

* Changed EndTurnDelegate so that Units Changing Ownership, and Hitpoint Repair, will still happen even if you have lost your capital. (veqryn)

* Getting MooreAI to submerge subs if only enemy air is left. (hakon)

* Fixing "Edit Unit Bombing Damage" for maps that use territory based damage, such as ww2v3. (veqryn)

* Allowing new option for the Play By Email / Play By Forum poster, to "Include Overall Dice Statistics" in the post/email. (veqryn)

* Improving the menu "GAME -> SHOW DICE STATS" to give information per player, as well as totals. (veqryn)

* Getting engine to record if the dice thrown is in Combat or not, for the dice statistics. (veqryn)

* Getting engine to record which player is rolling dice for the dice statistics. (veqryn)

* Adding scroll bars to edit place unit panel and non-tabbed purchase unit panel. (veqryn)

* Fixing non-serialization error when attempting to save the game after a successful aa gun roll, but before selecting casualties. (veqryn)

* Improved bombing result display to show ignored dice if there are any, and improving history panel to show the rolls for each target unit. (veqryn)

* Fixed integer array error in Strategy Bombing with Heavy Bombers, causing the second half of all rolls to not be rolled, thereby defaulting to one each. (veqryn)

* Fixed null pointer for undoing a placement made by UK in global 1940 maps, caused by the new no-air-checking delegate [players will need to update their 1940 maps though]. (veqryn)
